--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.2
   charts_flutter: ^0.9.0
+  stacked: ^1.7.6
 
 dev_dependencies:
   flutter_test:
