--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.12.2
   charts_flutter: ^0.9.0
   stacked: ^1.7.6
+  mockito: ^4.1.1
 
 dev_dependencies:
   flutter_test:
