--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
-        - asset: assets/fonts/Roboto/Roboto-Bold.ttf
-        - asset: assets/fonts/Roboto/Roboto-Light.ttf
+  # fonts:
+  #   - family: Roboto
+  #     fonts:
+  #       - asset: assets/fonts/Roboto/Roboto-Regular.ttf
+  #       - asset: assets/fonts/Roboto/Roboto-Bold.ttf
+  #       - asset: assets/fonts/Roboto/Roboto-Light.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
