--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -6,19 +6,29 @@ on:
   pull_request:
     branches: [ master, dev ]
 
-jobs:
-  build:
+env:
+  flutter_version: "1.20.2"
+  java_version: "12.x"
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v1
-      with:
-        flutter-version: '1.20.2'
-    - run: flutter pub get
-    - run: flutter test
-    - run: flutter analyze
+  test:
+      runs-on: ubuntu-latest
+      timeout-minutes: 5
+      steps:
+        - uses: actions/checkout@v1
+        - uses: actions/setup-java@v1
+          with:
+            java-version: ${{ env.java_version }}
+        - name: Cache Flutter dependencies
+          uses: actions/cache@v1
+          with:
+            path: /opt/hostedtoolcache/flutter
+            key: ${{ runner.OS }}-flutter-install-cache-${{ env.flutter_version }}
+        - uses: subosito/flutter-action@v1
+          with:
+            flutter-version: ${{ env.flutter_version }}
+        - name: Install dependencies
+          run: flutter pub get
+        - name: Analyze
+          run: flutter analyze
+        - name: Test
+          run: flutter test
