--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ environment:
 dependencies:
   flutter_svg: ^0.18.0
   auto_size_text: ^2.1.0
+  flutter_map: ^0.10.1+1
   flutter:
     sdk: flutter
 
